# CHeaT

./: .gitignore  README.md  pyproject.toml
cheat/: README.md  main.py  requirements.txt
cheat.egg-info/: SOURCES.txt
cheat/database/: honeytokens_defenses.json  honeytokens_templates.json  prompt_injection_defenses.json  prompt_injection_templates.json
cheat/defenses/: cheat.py  defense_creator.py  defense_database.py  defense_installer.py
cheat/tests/: sudo  suidbit_bin  test.html  test.txt
cheat/utils/: argument_parser.py  logger.py
ctf-machines/: README.md
datasets/: README.md  dataset_unicode_honeytokens.json
datasets/payloads/: payloads.json  payloads_boosted_with_prompt_injection.json  paylodas_boosted_with_prompt_injection.json
demo-notebook/: CloakHoneyTrap_playground.ipynb  README.md
demo-notebook/Snapshots/: Fact_NoVuln.json  Overwhelm_CVEs.json  Overwhelm_writable.json  bruteforce_ssh.json  honeypot_trap_exec.json
token-landmines/: README.md
